--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -22,7 +22,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - run 'echo ${{github.event_name}}'
+      - run: 'echo ${{github.event_name}}'
       - uses: actions/checkout@v3
       - name: Set up JDK 17
         uses: actions/setup-java@v3
