--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -29,5 +29,7 @@ jobs:
         with:
           java-version: '17'
           distribution: 'temurin'
+      - name: List files in the repository
+        run: ls -R
       - name: Build with Gradle
         run: ./backend/gradlew build
