Workflow update to build v1 fix yml v3

--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -30,6 +30,6 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
       - name: List files in the repository
-        run: ls -R
+        run: ls
       - name: Build with Gradle
-        run: ./backend/gradlew build
+        run: ./backend/gradlew build -p backend
