Workflow update to build v1 fix junit configuration

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -32,6 +32,6 @@ dependencies {
     testImplementation 'junit:junit:4.13.1'
 }
 
-tasks.named('test') {
-    useJUnitPlatform()
-}
+//tasks.named('test') {
+//    useJUnitPlatform()
+//}
