--- a/.github/workflows/publish-docker-image.yml
+++ b/.github/workflows/publish-docker-image.yml
@@ -23,12 +23,14 @@ jobs:
       - name: List files in the repository
         run: ls
       - name: Build with Gradle
-        run: ./backend/gradlew build -p backend
+        run: |
+          ./backend/gradlew build -p backend
+          cd backend
 
       - name: Log in to Docker Hub
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ variables.DOCKER_USERNAME }}" --password-stdin
 
       - name: Build and push Docker image
         run: |
-            docker build -t your-dockerhub-username/your-image-name:latest .
-            docker push your-dockerhub-username/your-image-name:latest
+            docker build -t "${{ vars.DOCKER_USERNAME }}"/"${{ github.repository }}" .
+            docker push "${{ vars.DOCKER_USERNAME }}"/"${{ github.repository }}":latest
