--- a/.github/workflows/publish-docker-image.yml
+++ b/.github/workflows/publish-docker-image.yml
@@ -31,6 +31,5 @@ jobs:
 
       - name: Build and push Docker image
         run: |
-            cd backend
-            docker build -t "${{ vars.DOCKER_USERNAME }}"/"${{ github.repository }}" .
+            docker build -t "${{ vars.DOCKER_USERNAME }}"/"${{ github.repository }}" ./backend
             docker push "${{ vars.DOCKER_USERNAME }}"/"${{ github.repository }}":latest
