--- a/.github/workflows/publish-docker-image.yml
+++ b/.github/workflows/publish-docker-image.yml
@@ -32,5 +32,5 @@ jobs:
       - name: Build and push Docker image
         run: |
             ls -R
-            docker build -t "${{ vars.DOCKER_USERNAME }}"/"${{ github.repository }}" ./backend
-            docker push "${{ vars.DOCKER_USERNAME }}"/"${{ github.repository }}":latest
+            docker build -t "${{ vars.DOCKER_USERNAME }}"/"${{ vars.image_name }}" ./backend
+            docker push "${{ vars.DOCKER_USERNAME }}"/"${{ vars.image_name }}":latest
