--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,13 +7,16 @@ services:
       POSTGRES_DB: mydb
       POSTGRES_USER: myuser
       POSTGRES_PASSWORD: mypassword
+    ports:
+      - "5432:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data
 
   spring-boot-app:
     build:
-      context: ./
-      dockerfile: backend/Dockerfile
+      context: ./backend
+      dockerfile: Dockerfile
+      image: vadymkartashov/hla26-ci-cd-image:latest
     environment:
       SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/mydb
       SPRING_DATASOURCE_USERNAME: myuser
@@ -22,15 +25,6 @@ services:
       - "8080:8080"
     depends_on:
       - postgres
-
-#  react-app:
-#    build:
-#      context: ./path_to_react_project
-#      dockerfile: frontend/Dockerfile
-#    ports:
-#      - "80:80"
-#    depends_on:
-#      - spring-boot-app
 
 volumes:
   pgdata:
