--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -11,28 +11,35 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - run: 'echo ${{github.event_name}}'
-      - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
+
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'temurin'
-      - name: List files in the repository
-        run: ls
+
       - name: Build with Gradle
         run: |
           ./backend/gradlew build bootJar -p backend
 
   publish:
-    needs: [build]
+    needs: build
     runs-on: ubuntu-latest
     steps:
-      - name: Log in to Docker Hub
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ vars.DOCKER_USERNAME }}" --password-stdin
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
       - name: Build and push Docker image
-        run: |
-          ls -R
-          docker build -t "${{ vars.DOCKER_USERNAME }}"/"${{ vars.image_name }}" ./backend
-          docker push "${{ vars.DOCKER_USERNAME }}"/"${{ vars.image_name }}":latest
+        uses: docker/build-push-action@v3
+        with:
+          context: ./backend
+          push: true
+          tags: secrets.DOCKER_USERNAME/vars.image_name:latest
