--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -37,9 +37,13 @@ jobs:
           username: ${{ vars.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
+      - name: List all files
+        run: ls -R
+
       - name: Build and push Docker image
         uses: docker/build-push-action@v3
         with:
           context: ./backend
+          file: ./backend/Dockerfile
           push: true
           tags: ${{ vars.DOCKER_USERNAME }}/${{ vars.image_name }}:latest
